--- a/src/TShop/frontend/package.json
+++ b/src/TShop/frontend/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "0.9.5",
     "reactstrap": "^8.9.0"
   },
