--- a/src/TShop/frontend/package.json
+++ b/src/TShop/frontend/package.json
@@ -6,9 +6,9 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "boostrap": "^2.0.0",
     "bootstrap": "^4.6.0",
     "css-loader": "^5.2.4",
+    "jquery": "^3.6.0",
     "postcss-loader": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
